--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
 </head>
 <body>
 	<div id="bar" style="width: 1500px;height: 600px;"></div>
+	<div id="line" style="width: 1500px;height: 600px;"></div>
 </body>
 </html>
 <script>
 	var key = ["北京","上海","天津","重庆","河北","山西","内蒙古","辽宁","吉林","黑龙江","江苏","浙江","安徽","福建","江西","山东","河南","湖北","湖南","广东","广西","海南","四川","贵州","云南","西藏","陕西","甘肃","宁夏","青海","新疆","香港","澳门","台湾"];
 	var value = ["442758159","233596658","1495476477","2126110581","559103449","1718602837","931043450","47440587","93937971","288609469","181932417","549675274","1988803250","1920713270","796830286","1453013047","136220534","937260047","1733075097","305407802","1460404436","1943071961","986479422","216872368","589258917","96686798","1001256077","331069792","182612799","1766029764","686715393","929025044","1139342644","2044923408"];
 	var bar = echarts.init(document.getElementById('bar'));
-	var option = {
+	var bar_option = {
 		title: {
 			text: '地域曝光柱状图',
 		},
@@ -34,5 +35,29 @@
 		}],
 		barWidth: "30px",
 	};
-	bar.setOption(option);
+	bar.setOption(bar_option);
+
+	var key = ["2018-01-1","2018-01-2","2018-01-3","2018-01-4","2018-01-5","2018-01-6","2018-01-7","2018-01-8","2018-01-9","2018-01-10","2018-01-11","2018-01-12","2018-01-13","2018-01-14","2018-01-15","2018-01-16","2018-01-17","2018-01-18","2018-01-19","2018-01-20","2018-01-21","2018-01-22","2018-01-23","2018-01-24","2018-01-25","2018-01-26","2018-01-27","2018-01-28","2018-01-29","2018-01-30","2018-01-31"];
+	var value = ["766315088","1641337515","104535129","1380704883","1575932734","254498358","1675636790","1644867680","381255618","1198188967","1389180582","1302587669","514712238","1211167403","38812184","1558624917","1958699511","1253559391","421301184","516247525","1559296115","731236970","394119232","980328244","680713735","1229624940","1788754524","1356522638","1776402964","130785010","1679593571"];
+	var line = echarts.init(document.getElementById('line'));
+	var line_option = {
+		title: {
+			text: '广告曝光折线图',
+		},
+		tooltip: {},
+		legend: {
+			data: ['曝光'],
+		},
+		xAxis: {
+			data: key,
+		},
+		yAxis: {},
+		series: [{
+			name: '曝光',
+			type: 'line',
+			data: value,
+			showAllSymbol: true,
+		}],
+	};
+	line.setOption(line_option);
 </script>
