--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<script src="echarts.min.js"></script>
+	<script src="map/china.js"></script>
 </head>
 <body>
 	<div id="bar" style="width: 1500px;height: 600px;"></div>
 	<div id="line" style="width: 1500px;height: 600px;"></div>
 	<div id="pie" style="width 800px;height: 600px;"></div>
+	<div id="map" style="width: 1200px;height: 600px;"></div> 
 </body>
 </html>
 <script>
@@ -91,4 +93,36 @@
 		}],
 	};
 	pie.setOption(pie_option);
+
+	var data = [{name: "北京",value: 77950858},{name: "上海",value: 525435190},{name: "天津",value: 567624519},{name: "重庆",value: 730746402},{name: "河北",value: 455615005},{name: "山西",value: 579071888},{name: "内蒙古",value: 577401185},{name: "辽宁",value: 845446357},{name: "吉林",value: 934258996},{name: "黑龙江",value: 7747435},{name: "江苏",value: 49607839},{name: "浙江",value: 444811362},{name: "安徽",value: 353732202},{name: "福建",value: 598716152},{name: "江西",value: 492117717},{name: "山东",value: 182018946},{name: "河南",value: 203191816},{name: "湖北",value: 606220285},{name: "湖南",value: 839679522},{name: "广东",value: 291340754},{name: "广西",value: 516755661},{name: "海南",value: 938740545},{name: "四川",value: 59889454},{name: "贵州",value: 252096841},{name: "云南",value: 333720785},{name: "西藏",value: 49963696},{name: "陕西",value: 282854214},{name: "甘肃",value: 278657030},{name: "宁夏",value: 489516206},{name: "青海",value: 234290025},{name: "新疆",value: 123655414},{name: "香港",value: 698895217},{name: "澳门",value: 675041652},{name: "台湾",value: 479626092}];
+	var map = echarts.init(document.getElementById('map'));
+	map_option = {
+		title: {
+			text: '广告曝光地图',
+			x: 'center',
+		},
+    		tooltip: {
+        		trigger: 'item',
+        		formatter: '{b}: {c}'
+    		},
+		visualMap: {
+			min: 0,
+			max: 1000000000,
+			text: ['高', '低'],
+			inRange: {
+				color: ['lightskyblue', 'yellow', 'orangered'],
+			}
+		},
+    		series: [{
+            		name: '广告曝光地图',
+            		type: 'map',
+            		mapType: 'china',
+			itemStyle: {
+				normal: {label: {show: true}},
+				emphasis: {label: {show: true}}
+			},
+			data: data,
+        	}]
+	};
+    	map.setOption(map_option);
 </script>
